# producer-consumer-STL-thread

./: CMakeLists.txt  CMakePresets.json  README.md  build_instruction.txt
include/: work_item.h  workers_stl_thread.h
src/: work_item.cpp  workers_stl_thread.cpp  workers_stl_thread_driver.cpp
